add multiple api support
